@@ -38,6 +38,9 @@ class tx_feuserregister_model_Preview extends tx_feuserregister_model_AbstractSt
 		$lllMarker		= $this->_getLllMarker();
 		
 		$marker = array_merge($fieldMarker, $labelMarker, $globalMarker, $lllMarker);
+
+		$this->_controller->notifyObservers('renderPreviewAdditionalMarker', array('marker' => &$marker));
+		
 		return t3lib_parsehtml::substituteMarkerArray($this->_templateContent, $marker, '', 0, 1);
 	}
 
